--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <header>
       <nav>
         <ul>
-          <li><a href="#first_section">first</a></li>
-          <li><a href="#second_section">second</a></li>
+          <li><a href="#first_section">start</a></li>
+          <li><a href="#second_section">video 1</a></li>
+          <li><a href="#third_section">om Sophie_ohmsen</a></li>
+          <li><a href="#fourth_section">billede collage</a></li>
+          <li><a href="#fifth_section">video 2</a></li>
+          <li><a href="#sixth_section">layout diagram</a></li>
         </ul>
       </nav>
 
@@ -29,16 +33,30 @@
       </section>
 
       <section id="second_section">
-        <p>
-          Sophie Ohmsen bor i et koliktiv på østerbro hvor hun på sit eget
-          værelse har sit helt eget kunst univers. Igennem sin kust får hun
-          udtrykt de følelser vi mennesker gennemgår både til daglig og hele
-          vores liv. Til dagligt bruger hun tid på er styrre sin egen kunst
-          virksomhed derudover er hun uddannet fysioteraput og studere
-          multimediedesign.
-        </p>
+        <video
+          controls
+          src="http://andreaseneberg.dk/kea/05_indhold/pilot/sophie_ohmsen_video.mp4"
+        ></video>
       </section>
+
       <section id="third_section">
+        <div class="section_wrapper">
+          <p>
+            Sophie Ohmsen bor i et koliktiv på østerbro hvor hun på sit eget
+            værelse har sit helt eget kunst univers. Igennem sin kust får hun
+            udtrykt de følelser vi mennesker gennemgår både til daglig og hele
+            vores liv. Til dagligt bruger hun tid på er styrre sin egen kunst
+            virksomhed, derudover er hun uddannet fysioteraput og studere
+            multimediedesign. Igennem hendes arbejde som fysioteraput møder hun
+            mange mennesker med udfordringer og kommer helt tæt på folks
+            følelser og finder derfor stor inspiration i dem og sin egene.
+            Multimediedesign uddanelsen vil hun bruge til at udvikle på sin kust
+            virksomhed.
+          </p>
+        </div>
+      </section>
+
+      <section id="fourth_section">
         <div class="section_wrapper">
           <div class="image1">
             <img
@@ -56,7 +74,7 @@
           </div>
 
           <div class="image4">
-            <img src="billeder/tegner_skitser.jpeg" alt="tegner_skitser" />
+            <img src="billeder/k.jpeg" alt="på_gulv" />
           </div>
 
           <div class="image5">
@@ -64,11 +82,36 @@
           </div>
 
           <div class="image6">
-            <img src="billeder/på_gulv.jpeg" alt="på_gulv" />
+            <img src="billeder/tegner_skitser.jpeg" alt="tegner_skitser" />
+          </div>
+
+          <div class="image7">
+            <img src="billeder/t.jpeg" alt="maler_bagfra" />
+          </div>
+
+          <div class="image8">
+            <img src="billeder/y.png" alt="kvinde" />
           </div>
         </div>
       </section>
+
+      <section id="fifth_section">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/YMbc1QqJ4XU"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </section>
+
+      <section id="sixth_section">
+        <img src="billeder/layout_diagram.png" alt="layout_diagram" />
+      </section>
     </main>
+    <footer>Lavet af Andrea Seneberg Christensen</footer>
     <script src="javascript.js"></script>
   </body>
 </html>
